Stockfish into lichess

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 .idea/
 /misc-testing-scripting/chessapi_test/__pycache__/**
 /misc-testing-scripting/chessapi_test/stockfish_13_win_x64_avx2.exe
+/stockfish_13_win_x64/stockfish_13_win_x64.exe
