--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /misc-testing-scripting/chessapi_test/__pycache__/**
 /misc-testing-scripting/chessapi_test/stockfish_13_win_x64_avx2.exe
 /stockfish_13_win_x64/stockfish_13_win_x64.exe
+/misc-testing-scripting/lichessapitesting/lichess_test.py
