--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 .idea/
 /misc-testing-scripting/chessapi_test/__pycache__/**
 /stockfish_13_win_x64_avx2.exe
+node_modules
+Musical-Chess\package-lock.json
